# rdx

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  SPECIFICATION.md
.github/workflows/: release.yml  test.yml
rdx-ast/: Cargo.toml  README.md
rdx-ast/src/: lib.rs
rdx-cli/: Cargo.toml  README.md
rdx-cli/src/: ast_util.rs  check.rs  convert.rs  fmt.rs  main.rs  refs.rs  stats.rs  test_helpers.rs
rdx-github/: Cargo.toml  README.md
rdx-github/src/: lib.rs
rdx-math/: Cargo.toml
rdx-math/src/: lib.rs  parser.rs  symbols.rs  tokenizer.rs
rdx-node/: Cargo.toml  README.md  package.json
rdx-node/npm/: index.d.ts  package.json
rdx-node/src/: lib.rs
rdx-parser/: Cargo.toml  README.md
rdx-parser/src/: attributes.rs  frontmatter.rs  lib.rs  markdown.rs  scanner.rs  source_map.rs  tags.rs  text.rs
rdx-parser/tests/: example.rdx  kitchen_sink.rs
rdx-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
rdx-py/python/rdx/: __init__.py
rdx-py/python/rdx/lib_rdx.dylib.dSYM/Contents/: Info.plist
rdx-py/python/rdx/lib_rdx.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_rdx.dylib.yml
rdx-py/src/: lib.rs
rdx-schema/: Cargo.toml  README.md
rdx-schema/src/: builtins.rs  lib.rs  validate.rs
rdx-schema/tests/: validation.rs
rdx-transform/: Cargo.toml  README.md
rdx-transform/src/: lib.rs
rdx-transform/src/transforms/: abbreviation.rs  auto_number.rs  citation_resolve.rs  cross_ref_resolve.rs  mod.rs  print_fallback.rs  slug.rs  strip_target.rs  toc.rs
rdx-wasm/: Cargo.toml  README.md
rdx-wasm/npm/: package.json
rdx-wasm/src/: lib.rs
