[package]
name = "rdx-ast"
description = "AST type definitions for the RDX (Reactive Document eXpressions) specification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
