[package]
name = "rdx-cli"
description = "Command-line interface for RDX documents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rdx"
path = "src/main.rs"

[dependencies]
rdx-parser.workspace = true
rdx-ast.workspace = true
rdx-transform.workspace = true
rdx-schema.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
