[package]
name = "rdx-node"
description = "Native Node.js bindings for the RDX parser via napi-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rdx-ast.workspace = true
rdx-parser.workspace = true
rdx-schema.workspace = true
rdx-transform.workspace = true
rdx-github.workspace = true
napi = { version = "2", default-features = false, features = ["napi9", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
