[package]
name = "rdx-parser"
description = "Parser for RDX (Reactive Document eXpressions) documents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rdx-ast.workspace = true
pulldown-cmark = "0.12"
serde_json = "1"
serde-saphyr = "0.0"
