[package]
name = "rdx-schema"
description = "Schema validation for RDX (Reactive Document eXpressions) component ASTs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rdx-ast.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rdx-parser.workspace = true
