[package]
name = "rdx-transform"
description = "Transform pipeline and built-in plugins for RDX (Reactive Document eXpressions) ASTs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rdx-ast = { path = "../rdx-ast" }
rdx-parser = { path = "../rdx-parser" }
serde_json = "1"

[dev-dependencies]
